--- a/HB/HB 2201-Driver 2018.tex
+++ b/HB/HB 2201-Driver 2018.tex
@@ -78,13 +78,13 @@ purchase their own copies.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
-\begin{thebibliography}{NRSV}% use the longest item in the bibliography
+\begin{thebibliography}{BBH}% use the longest item in the bibliography
 
     \bibitem[BBH]{bbh}
     John A. Cook and Robert D. Holmstedt.
     \emph{Beginning Biblical Hebrew: A Grammar and Illustrated Reader}.
-    Grand Rapids: Baker Academic, 2013. ISBN 978-0801048869. Study aids are available at
-    <\href{http://www.bakerpublishinggroup.com/books/beginning-biblical-hebrew/5629/students/esources}{www.bakeracademic.com}>.
+    Grand Rapids: Baker Academic, 2013. ISBN 978-0801048869. A helpful
+    set of study aids are available \href{http://www.bakerpublishinggroup.com/books/beginning-biblical-hebrew/5629/students/esources}{online at bakeracademic.com}.
 
     \bibitem[TM]{tm}
     Takamitsu Muraoka.
@@ -125,98 +125,6 @@ making oral presentations, and learning languages.
 
 \end{thebibliography}
 \endgroup
-
-Among the many Hebrew grammars and resources, note the following
-especially:
-
-\begin{itemize}
-  \item Guides \& Aids
-
-    \begin{itemize}
-      \item
-        Van Pelt, Miles. \emph{English Grammar to Ace Biblical Hebrew}.
-        Grand Rapids: Zondervan, 2010. At AST: PE 1130 H5 V35 2010
-      \item
-        Scott, W.\,R., and H.\,P. Rüger. \emph{A Simplified Guide to BHS:
-        Critical Apparatus, Masora, Accents, Unusual Letters \& Other
-        Markings}. 3rd edition. N. Richland Hills, TX: BIBAL, 2007.
-        At AST: BS 715 1977f
-      \item
-        Einspahr, Bruce. \emph{Index to Brown, Driver \& Briggs Hebrew Lexicon}.
-        Chicago: Moody Press, 1976. At AST: PJ 4833 B683 E35
-      \item
-        Landes, George M. \emph{Building Your Biblical Hebrew Vocabulary: Learning Words by Frequency and Cognate}.
-        Atlanta: SBL, 2001. At AST: PJ 4845 L25 2001
-    \end{itemize}
-
-  \item Basic Grammars, Syntaxes \& Reference Grammars
-
-    \begin{itemize}
-      \item
-        Pratico, Gary and Miles Van Pelt. \emph{Basics of Biblical Hebrew Grammar}.
-        Grand Rapids: Zondervan, 2001. At AST: PJ 4567.3 P73 2007
-      \item
-        Martin, J.\,D. \emph{Davidson’s Introductory Hebrew Grammar}.
-        27th edition. Edinburgh: T\&T Clark, 1993. This is the grammar
-        I was assigned in St Andrews, Scotland. At AST: PJ 4567 D37 1962
-      \item
-        Seow, C.\,L. \emph{A Grammar for Biblical Hebrew}.
-        Nashville: Abingdon, 1995. At AST: PJ 4567 S424 1995
-      \item
-        Weingreen, J. \emph{A Practical Grammar for Classical Hebrew}.
-        Oxford: Clarendon, 1959. At AST: PJ 4567 W4 1959
-      \item
-      	Arnold, Bill T., and John H. Choi. \emph{A Guide to Biblical Hebrew Syntax}.
-      	Cambridge: Cambridge University Press, 2003. At AST: PJ 4701 A76 2003
-      \item
-      	Waltke, Bruce K., and M. O’Connor. \emph{An Introduction to Biblical Hebrew Syntax}.
-      	Winona Lake, IN: Eisenbrauns, 1990.
-      \item
-        Williams, Ronald J., and  Beckman, John C. \emph{Williams' Hebrew Syntax}.
-        Toronto: University of Toronto Press, 2007. At AST: PJ 4701 W5 2007
-      \item
-        Gesenius, Wilhelm, E. Kautsch and A.\,E. Cowley. \emph{Hebrew Grammar}.
-        Oxford: Clarendon, 1910. \textbf{GKC} remains a standard Hebrew
-        reference grammar in English, even though Cowley's translation
-        -- of the 28th german edition -- is now over 100 years old. At
-        AST: PJ 4564 G5 1910
-      \item
-      	Joüon, P., and T. Muraoka. \emph{A Grammar of Biblical Hebrew}.
-      	2nd edition. Subsidia Biblica 27. Rome: Pontifical Biblical
-      	Institute, 2008. One of the most complete and up-to-date
-      	Hebrew grammars in English, \textbf{JM} (1st ed. 1991) was
-      	revised from a French work first published by Paul Joüon in
-      	1923. At AST: PJ 4567 J7613 1993
-    \end{itemize}
-
-  \item Lexicons
-
-    \begin{itemize}
-      \item
-        Brown, Francis, S.\,R. Driver and Charles A. Briggs. \emph{The
-        Brown-Driver-Briggs Hebrew and English Lexicon}. Peabody, Mass:
-        Hendrickson, 2004. The \textbf{BDB} was originally published in 1906.
-        On \href{https://archive.org/details/hebrewenglishlex00geseuoft}{archive.org}
-        and at AST: PJ 4833 B68 1996
-      \item
-        Köhler, Ludwig, and Walter Baumgartner. \emph{The Hebrew
-        and Aramaic Lexicon of the Old Testament}. Leiden: Brill,
-        1994--2000.
-        At AST: PJ 4833 K61813 1994
-      \item
-        Holladay, William L. \emph{A Concise Hebrew and Aramaic Lexicon
-        of the Old Testament, Based Upon the Lexical Work of Ludwig
-        Koehler and Walter Baumgartner}.
-        Grand Rapids: Eerdmans, 1971.
-        At AST: PJ 4833 H6 1971
-      \item
-        Clines, David J.\,A. \emph{The Dictionary of Classical Hebrew}.
-        Sheffield: Sheffield Academic Press, 1993--2011.
-        At AST: PJ 4833 D53 1993
-    \end{itemize}
-
-\end{itemize}
-
 
 \section{Course Outline}
 \label{outline}
@@ -313,5 +221,116 @@ The breakdown for the semester's total work is shown in
 
 \input{\policy/grades}
 \input{\policy/other}
+
+
+\section{Bibliography}
+\label{bib}
+
+Among the many Hebrew grammars and resources, note the following
+especially:
+
+\begin{itemize}
+  \item Guides \& Aids
+
+    \begin{itemize}
+      \item
+        Van Pelt, Miles. \emph{English Grammar to Ace Biblical Hebrew}.
+        Grand Rapids: Zondervan, 2010. At AST: PE 1130 H5 V35 2010
+      \item
+        Einspahr, Bruce. \emph{Index to Brown, Driver \& Briggs Hebrew Lexicon}.
+        Chicago: Moody Press, 1976. At AST: PJ 4833 B683 E35
+      \item
+        Landes, George M. \emph{Building Your Biblical Hebrew
+        Vocabulary: Learning Words by Frequency and Cognate}.
+        Atlanta: SBL, 2001. At AST: PJ 4845 L25 2001
+      \item
+        Scott, W.\,R., and H.\,P. Rüger. \emph{A Simplified Guide to BHS:
+        Critical Apparatus, Masora, Accents, Unusual Letters \& Other
+        Markings}. 3rd edition. N. Richland Hills, TX: BIBAL, 2007.
+        At AST: BS 715 1977f
+      \item
+        Kelley, Page H., Daniel S. Mynatt, and Timothy G. Crawford.
+        \emph{The Masorah of Biblia Hebraica Stuttgartensia:
+        Introduction and Annotated Glossary}.
+        Grand Rapids: Eerdmans, 1998. At AST: BS 718 K38 1998
+    \end{itemize}
+
+  \item Introductory Grammars
+
+    \begin{itemize}
+      \item
+        Kittel, Bonnie, Vicki Hoffer, and Rebecca Abts Wright.
+        \emph{Biblical Hebrew: Text and Workbook} [and Audio CD].
+        2nd edition. New Haven: Yale, 2004.
+      \item
+        Martin, J.\,D. \emph{Davidson’s Introductory Hebrew Grammar}.
+        27th edition. Edinburgh: T\&T Clark, 1993. At AST: PJ 4567 D37 1962
+      \item
+        Pratico, Gary and Miles Van Pelt. \emph{Basics of Biblical Hebrew Grammar}.
+        Grand Rapids: Zondervan, 2001. At AST: PJ 4567.3 P73 2007
+      \item
+        Seow, C.\,L. \emph{A Grammar for Biblical Hebrew}.
+        Nashville: Abingdon, 1995. At AST: PJ 4567 S424 1995
+      \item
+        Weingreen, J. \emph{A Practical Grammar for Classical Hebrew}.
+        Oxford: Clarendon, 1959. At AST: PJ 4567 W4 1959
+    \end{itemize}
+
+
+  \item Syntaxes \& Reference Grammars
+
+    \begin{itemize}
+      \item
+      	Arnold, Bill T., and John H. Choi. \emph{A Guide to Biblical Hebrew Syntax}.
+      	Cambridge: Cambridge University Press, 2003. At AST: PJ 4701 A76 2003
+      \item
+      	Waltke, Bruce K., and M. O’Connor. \emph{An Introduction to Biblical Hebrew Syntax}.
+      	Winona Lake, IN: Eisenbrauns, 1990.
+      \item
+        Williams, Ronald J., and  Beckman, John C. \emph{Williams' Hebrew Syntax}.
+        Toronto: University of Toronto Press, 2007. At AST: PJ 4701 W5 2007
+      \item
+        Gesenius, Wilhelm, E. Kautsch and A.\,E. Cowley. \emph{Hebrew Grammar}.
+        Oxford: Clarendon, 1910. \textbf{GKC} remains a standard Hebrew
+        reference grammar in English, even though Cowley's translation
+        -- of the 28th german edition -- is now over 100 years old. At
+        AST: PJ 4564 G5 1910
+      \item
+      	Joüon, P., and T. Muraoka. \emph{A Grammar of Biblical Hebrew}.
+      	2nd edition. Subsidia Biblica 27. Rome: Pontifical Biblical
+      	Institute, 2008. One of the most complete and up-to-date
+      	Hebrew grammars in English, \textbf{JM} (1st ed. 1991) was
+      	revised from a French work first published by Paul Joüon in
+      	1923. At AST: PJ 4567 J7613 1993
+    \end{itemize}
+
+  \item Lexicons
+
+    \begin{itemize}
+      \item
+        Brown, Francis, S.\,R. Driver and Charles A. Briggs. \emph{The
+        Brown-Driver-Briggs Hebrew and English Lexicon}. Peabody, Mass:
+        Hendrickson, 2004. The \textbf{BDB} was originally published in 1906.
+        On \href{https://archive.org/details/hebrewenglishlex00geseuoft}{archive.org}
+        and at AST: PJ 4833 B68 1996
+      \item
+        Köhler, Ludwig, and Walter Baumgartner. \emph{The Hebrew
+        and Aramaic Lexicon of the Old Testament}. Leiden: Brill,
+        1994--2000.
+        At AST: PJ 4833 K61813 1994
+      \item
+        Holladay, William L. \emph{A Concise Hebrew and Aramaic Lexicon
+        of the Old Testament, Based Upon the Lexical Work of Ludwig
+        Koehler and Walter Baumgartner}.
+        Grand Rapids: Eerdmans, 1971.
+        At AST: PJ 4833 H6 1971
+      \item
+        Clines, David J.\,A. \emph{The Dictionary of Classical Hebrew}.
+        Sheffield: Sheffield Academic Press, 1993--2011.
+        At AST: PJ 4833 D53 1993
+    \end{itemize}
+
+\end{itemize}
+
 
 \end{document}
