--- a/HB/HB 2201-Driver 2018.tex
+++ b/HB/HB 2201-Driver 2018.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[3.1]{HB 2201}
+\coursecode[3.1.1]{HB 2201}
 \coursetitle[Hebrew Bible]{Beginning Biblical Hebrew I}
 
 % Taught as HEBR 2013 in:
@@ -33,15 +33,18 @@
       {2:00--4:30 \PM}
       {Classroom 3}
 \website{danieldriver.com}
-\cdescription[none. The course is required for HB 2202 and more advanced biblical Hebrew]{% copy from the current Academic Calendar; [] for prereqs
+\cdescription[none. The course is required for HB 2202 and advanced biblical Hebrew]{% copy from the current Academic Calendar; [] for prereqs
 	An introduction to the basic principles of biblical Hebrew with
 	emphasis on morphology, phonology, and syntax, this course is for
-	students who want to study the Old Testament in Hebrew. We will
-	learn basic Hebrew grammar, develop a rudimentary biblical Hebrew
-	vocabulary, and read the Hebrew Bible with an eye toward
-	interpretation of the Bible in the Church. (This course is open to
-	undergraduate students from other universities. Please contact the
-	AST Registrar to enroll as a Letter of Permission student.)
+	students who want to study the Old Testament in Hebrew. Students
+	will learn basic Hebrew grammar, develop a rudimentary biblical
+	Hebrew vocabulary, and begin to read the Hebrew Bible with one eye
+	on the window it opens into ancient Israel and another on its
+	historic role as as scripture in Judaism and Christianity. This
+	course is suitable preparation for further study in religion,
+	theology, or classics. (It is open to undergraduate and graduate
+	students from other universities. Please contact the AST Registrar
+	to enroll as a Letter of Permission student.)
 }% end of course description
 \objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
 	The basic goal of this course is to become proficient in the
