hide Sec 3 from Guidelines (for now)

--- a/Guidelines_for_Papers.tex
+++ b/Guidelines_for_Papers.tex
@@ -35,11 +35,11 @@
 
 % Title
 \title{Guidelines for Papers and Other Written Assignments}
-\author{Daniel R. Driver, PhD\thanks{I would like to acknowledge my
-teachers. Two who might recognize echoes of their advice in what I set
-forth here are Jeffry C. Davis, who introduced me to composition theory,
-practice, and pedagogy, and Nathan MacDonald, who helped me see the use
-of setting an effective book review assignment.}}
+\author{Daniel R. Driver, PhD\thanks{I would like to acknowledge two
+teachers who might recognize echoes of their advice here. Jeffry C.
+Davis introduced me to composition theory, practice, and pedagogy, and
+Nathan MacDonald helped me see the use of setting an effective book
+review assignment.}}
 \date{}
 
 \begin{document}
@@ -311,51 +311,51 @@ much time as you can to revise your work, knowing that writing is a
 rigorous process. Write. Reflect. Rewrite. Edit. Repeat as necessary. It
 takes real effort to make prose appear effortless.
 
-\section{Write, Reflect, Rewrite, Edit}
-
-\subsection{Write Shitty Rough Drafts}
-
-\subsection{Take a Nap}
-
-
-Or, read a poem, such as the following one by Scott
-Cairns.\footnote{First printed in \emph{The Theology of Doubt} (1985),
-Cairns's “On Slow Learning” is reprinted in \emph{Compass of Affection:
-Poems New and Selected} (Brewster, MA: Paraclete Press, 2006), 5.}
-
-\poemtitle{\sffamily On Slow Learning}
-\settowidth{\versewidth}{how difficult paper training can be}
-\begin{verse}[\versewidth]
-If you have ever owned\\
-a tortoise, you already know\\
-how terribly difficult\\
-paper training can be\\
-for some pets.
-
-Even if you get so far\\
-as to instill in your tortoise\\
-the value of achieving the paper,\\
-there remains one obstacle---\\
-your tortoise’s intrinsic sloth.
-
-Even a well-intentioned tortoise\\
-may find himself, in his journeys,\\
-to be painfully far from the mark.
-
-Failing, your tortoise may shy away\\
-for weeks within his shell, utterly\\
-ashamed, or looking up with tiny,\\
-wet eyes might offer an honest shrug.\\
-Forgive him.
-\end{verse}
-
-\subsection{Write and Rewrite}
-
-\subsection{Try the Paramedic Method}
-
-See the Online Writing Lab (OWL) at Purdue University for details.
-Search for “Paramedic Method” or go to:
-https://owl.english.purdue.edu/owl/resource/635/01/
+%\section{Write, Reflect, Rewrite, Edit}
+%
+%\subsection{Write Shitty Rough Drafts}
+%
+%\subsection{Take a Nap}
+%
+%
+%Or, read a poem, such as the following one by Scott
+%Cairns.\footnote{First printed in \emph{The Theology of Doubt} (1985),
+%Cairns's “On Slow Learning” is reprinted in \emph{Compass of Affection:
+%Poems New and Selected} (Brewster, MA: Paraclete Press, 2006), 5.}
+%
+%\poemtitle{\sffamily On Slow Learning}
+%\settowidth{\versewidth}{how difficult paper training can be}
+%\begin{verse}[\versewidth]
+%If you have ever owned\\
+%a tortoise, you already know\\
+%how terribly difficult\\
+%paper training can be\\
+%for some pets.
+%
+%Even if you get so far\\
+%as to instill in your tortoise\\
+%the value of achieving the paper,\\
+%there remains one obstacle---\\
+%your tortoise’s intrinsic sloth.
+%
+%Even a well-intentioned tortoise\\
+%may find himself, in his journeys,\\
+%to be painfully far from the mark.
+%
+%Failing, your tortoise may shy away\\
+%for weeks within his shell, utterly\\
+%ashamed, or looking up with tiny,\\
+%wet eyes might offer an honest shrug.\\
+%Forgive him.
+%\end{verse}
+%
+%\subsection{Write and Rewrite}
+%
+%\subsection{Try the Paramedic Method}
+%
+%See the Online Writing Lab (OWL) at Purdue University for details.
+%Search for “Paramedic Method” or go to:
+%https://owl.english.purdue.edu/owl/resource/635/01/
 
 \onecolumn
 \thispagestyle{empty}
