change classrooms (F18 construction in Library)

--- a/BF/BF 1001-Driver 2018.tex
+++ b/BF/BF 1001-Driver 2018.tex
@@ -46,7 +46,7 @@
 \semester{Fall Term 2018}
 \meets{\Int{Thursdays}{Mondays}}% \meets{on}{at}{in}
       {1:00--3:30 \PM}
-      {Flahiff Room}
+      {Classroom 3}
 \website{danieldriver.com}
 \cdescription[none. The course is required for HB courses at or above the 3000-level]{% copy from the current Academic Calendar; [] for prereqs
 	The First Testament of Christian Scripture, also called the Hebrew
