ST/HB 3101 Eucharist v1.0 - final

--- a/ST-cross/HBST 3001-Doctrine and the OT.tex
+++ b/ST-cross/HBST 3001-Doctrine and the OT.tex
@@ -52,9 +52,13 @@
 }% end of course description
 \objectives{% review Bloom's taxonomy: http://www.celt.iastate.edu/teaching/effective-teaching-practices/revised-blooms-taxonomy
             % or try this new one at Rice: http://cte.rice.edu/blogarchive/2017/2/23/taxonomy
-	By the end of this course students should
-		develop knowledge of some ways different churches -- include the RCC, ACC and UCC --
-		approach the Bible in general, and the Old Testament in particular, as scripture.
+	This course aims to do two things. (1) To offer an overview of the ecumenical core of Christian eucharistic theology. (2) To introduce and discuss some of the different perspectives on the Eucharist that shape ecumenical relations today.
+
+	Inconveniently for us, early Christians didn’t write with us in mind. Almost all early Christian texts are written for “insiders” by “insiders”. There are no “So you’ve decided to become a Christian” pamphlets with detailed descriptions of their practices. If there were, we would have a much better sense of how they understood the bread they broke and the cup they drank. Instead, all we have are tantalising snippets – most of which you’ll read – from the early Church where they refer to their eucharistic practices. But how are we to understand these snippets? They make reference to Jewish and New Testament foundations, and so, before you read them, you’ll get acquainted with some of these sources. But from these scant sources you’ll be invited, in dialog with each other and the instructors, to develop your understanding of the Eucharist. What is it? A memorial meal? A symbolic re-enactment of the last supper? Golgotha continued as the hand of God reached out from the Triune life to weave us into union with God and each other? What is it? Does it do anything to you? If so, under what conditions is its potency greatest? Why do Roman Catholics ask non-Roman Catholics to refrain from taking communion at Roman Catholic Masses? Is this not ecumenical elitism – a refusal of the very unity the Eucharist symbolises (or instantiates)? We will be asking all these questions. We will be doing so in dialog with a subtheme of this course – the past and future of eucharistic sharing at AST. AST was at the forefront of post Vatican II Christian ecumenism and eucharistic sharing was commonplace. What needs to be in place for this to happen again? Is the eucharist an instrument for bringing about Christian unity? Is it a sacramental consummation of ontological unity – the sign of Christian oneness? Or, Is it an act of friendship between diverse and different strands of Christianity?
+
+	In addition to exploring the Eucharist \emph{per se}, and the eucharist in ecumenical perspective, there is also an opportunity for each student to investigate particular aspects of eucharistic and/or ecumenical theology via the two main papers you will be writing in fulfillment of course requirements. Touch base with the instructors when something “grabs you”. We will be able to recommend readings as you follow your ideas where they lead.
+
+
 	They should become familiar with
 		a few major narratives about the relationship of Bible and Theology, and with
 		different theories about how to frame knowledge of God (in terms apophatic and kataphatic, for example).
