--- a/policy/other.tex
+++ b/policy/other.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{other.tex}[2018/05/25 v2.5 -- Course policy]
+\ProvidesFile{other.tex}[2019/01/05 v2.6 -- Course policy]
 
 \section{Other Course Policy}
 \label{policy}
@@ -32,7 +32,7 @@ other technology in my classes. In classroom settings, realize that, as
 psychologists have demonstrated}, ``laptop multitasking hinders
 classroom learning for both users and nearby peers.'' Do your part to
 foster an environment of open dialogue by honouring the presence of your
-classmates. In online settings, consider both the physical environment
-in which you choose to work and the virtual environment that you help
-create through your participation in various forums. Let your engagement
-in this course be marked by rigour and charity alike.
+classmates. In online and hybrid settings, consider both the physical
+environment in which you choose to work and the virtual environment that
+you help create through your participation in various forums. Let your
+engagement in this course be marked by rigour and charity alike.
