Winter 2019 syllabi, part 2

--- a/ST-cross/STHB 3101-Eucharist.tex
+++ b/ST-cross/STHB 3101-Eucharist.tex
@@ -140,7 +140,7 @@ have been placed on a 2-hour reserve.
 \begin{thebibliography}{9}% use the longest item in the bibliography
 
 	\bibitem{Hunsinger} George Hunsinger.
-	\emph{The Eucharist and Ecumenism: Let Us Keep the Feast.* Current Issues in Theology}.
+	\emph{The Eucharist and Ecumenism: Let Us Keep the Feast}. Current Issues in Theology.
 	Cambridge: Cambridge University Press, 2012. ISBN 978-0521719179.
 
 	\bibitem{Pitre} Brant Pitre.
