minor updates to W19 syllabi

--- a/HB/HB 2202-Driver 2019.tex
+++ b/HB/HB 2202-Driver 2019.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[3.0]{HB 2202}
+\coursecode[3.1]{HB 2202}
 \coursetitle[Hebrew Bible]{Beginning Biblical Hebrew II}
 
 % Taught as HEBR 2023 in:
@@ -24,9 +24,9 @@
 %   - Winter 2019
 
 \professor{Daniel R. Driver}
-\phone{902-222-0930}
+\phone{902-425-7051}
 \email{ddriver@astheology.ns.ca}
-\officehours[Room 206, then Library?]{By Appointment}%{Thursdays, 12:30--2:00 \PM}
+\officehours{By Appointment}%{Thursdays, 12:30--2:00 \PM}
 
 \semester{Winter Term 2019}
 \meets{Tuesdays}% \meets{on}{at}{in}
@@ -149,34 +149,35 @@ the needs of the class.
     \bfseries L & \textbf{BBH Grammar Lesson} & \textbf{Due Date} \\
     \midrule
     27, 28  & Reading 5 (Genesis 3\texthebrew{ב}); \texthebrew{‫קַל‬} Imperfect Conjugation\null                    &  8 Jan.     \\
-    29      & \texthebrew{‫בִּנְיָנִים: פִּעֵל וְהִפְעִיל‬}\null                                       & 10 Jan.     \\ \addlinespace
+    29      & \texthebrew{‫בִּנְיָנִים: פִּעֵל וְהִפְעִיל‬}\null                                       & 11 Jan.     \\ \addlinespace
     30, r-6 & Main and Subordinate Clauses; Reading 6 (Genesis 22\texthebrew{ב})\null    & 15 Jan.     \\
-    31      & Attached Pronouns: Plural                                                  & 17 Jan.     \\ \addlinespace
+    31      & Attached Pronouns: Plural                                                  & 18 Jan.     \\ \addlinespace
     32, 33  & Adjectives; Demonstrative Pronouns                                         & 22 Jan.     \\
-	34      & \texthebrew{‫סְגֹלֶת‬} Noun Pattern                                           & 24 Jan.     \\ \addlinespace
+	34      & \texthebrew{‫סְגֹלֶת‬} Noun Pattern                                           & 25 Jan.     \\ \addlinespace
     r-7, 35 & Reading 7 (Genesis 37\texthebrew{ב}); Past Narrative Conjugation           & 29 Jan.     \\
-    36      & \texthebrew{‫וַיְהִי‬}\null                                                    & 31 Jan.     \\ \addlinespace
+    36      & \texthebrew{‫וַיְהִי‬}\null                                                    &  1 Feb.     \\ \addlinespace
     37, 38  & \texthebrew{‫בִּנְיָנִים: נִפְעַל וְהִתְפַּעֵל‬}; Dynamic and Stative Verbs               &  5 Feb.     \\
-    r-8     & Reading 8 (Genesis 3\texthebrew{ג})\null                                   &  7 Feb.     \\ \addlinespace
-    \sessionskip{\rarr} & \textbf{Midterm Exam}                                          & 12 Feb.     \\
-    39, 40  & Jussives and Imperatives; Attached Pronouns with Verbs                     & 14 Feb.     \\ \addlinespace
+    r-8     & Reading 8 (Genesis 3\texthebrew{ג})\null                                   &  8 Feb.     \\ \addlinespace
+    39, 40  & Jussives and Imperatives; Attached Pronouns with Verbs                     & 12 Feb.     \\
+    r-7, 8  & Readings: Catch up and review                                                    & 15 Feb.     \\ \addlinespace
 
 %    \midrule
-    \noclass{Reading Week}                                                               & 18--22 Feb. \\ \addlinespace
+    \noclass{Reading Week}                                                               & 18--22 Feb. \\
+	\reminder{\textbf{Midterm Exam}: A take-home exam is due by the end of the week}{22 Feb.}    \\ \addlinespace
 %    \midrule
 
     41, r-9 & Word Order with Topic and Focus; Reading 9 (Genesis 22\texthebrew{ג})\null & 26 Feb.     \\
-    42      & Participles                                                                & 28 Feb.     \\ \addlinespace
+    42      & Participles                                                                &  1 Mar.     \\ \addlinespace
     43, 44  & Foreground and Background of Narrative; The Verbal System                  &  5 Mar.     \\
-    r-10    & Reading 10 (Genesis 37\texthebrew{ג})\null                                 &  7 Mar.     \\ \addlinespace
+    r-10    & Reading 10 (Genesis 37\texthebrew{ג})\null                                 &  8 Mar.     \\ \addlinespace
     45, 46  & Numerals; Topic                                                            & 12 Mar.     \\
-    r-11    & Reading 11 (Genesis 1)                                                     & 14 Mar.     \\ \addlinespace
+    r-11    & Reading 11 (Genesis 1)                                                     & 15 Mar.     \\ \addlinespace
     47, 48  & Accents; Complements and Adjuncts                                          & 19 Mar.     \\
-    r-12    & Reading 12 (Genesis 47)                                                    & 21 Mar.     \\ \addlinespace
+    r-12    & Reading 12 (Genesis 47)                                                    & 22 Mar.     \\ \addlinespace
     49, 50  & Case Relations; Lexical Semantics                                          & 26 Mar.     \\
-    r-13    & Reading 13 (Genesis 50)                                                    & 28 Mar.     \\ \addlinespace
+    r-13    & Reading 13 (Genesis 50)                                                    & 29 Mar.     \\ \addlinespace
     r-14    & Selected Hebrew Readings (Muraoka)                                         &  2 Apr.     \\
-    \sessionskip{\rarr} & \textbf{Final Exam}                                            &  4 Apr.     \\
+    \reminder{\textbf{Final Exam}: A take-home exam is due by the end of the week}{5 Apr.}             \\
 
     \bottomrule
   \end{tabular}
@@ -198,9 +199,9 @@ The grade structure for \ccode has the following elements.
     \cite{tm}. \textbf{Quizzes} based on the weekly assignments will be
     given regularly. Some of these may come directly from \cite{bbh}.
  \item
-   A cumulative \textbf{midterm exam} will be given in the sixth week of class.
+   A cumulative \textbf{midterm exam} (take home) is due by the end of reading week.
  \item
-   A comprehensive \textbf{final exam} will be given in the last class.
+   A comprehensive \textbf{final exam} (take home) is due by the end of the last week of class.
 \end{enumerate}
 
 The breakdown for the semester's total work is shown in
