--- a/HB/HB 3116i-Ecclesiastes.tex
+++ b/HB/HB 3116i-Ecclesiastes.tex
@@ -21,9 +21,9 @@
 %   - Winter 2019
 
 \professor{Daniel R. Driver}
-\phone{902-222-0930}
+\phone{902-425-7051}
 \email{ddriver@astheology.ns.ca}
-\officehours[Room 106, then Library?]{By appointment}
+\officehours{By appointment}
 
 \semester{Winter Term 2019}
 \meets{On Fridays}% \meets{on}{at}{in}
