--- a/ST-cross/STHB 3101-Eucharist.tex
+++ b/ST-cross/STHB 3101-Eucharist.tex
@@ -19,8 +19,8 @@
 %   - Winter 2019
 
 \professor[PhDs]{D. Deane \& D. Driver}
-\phone{902-222-0930 (Driver)}
-\email{ddeane@astheology.ns.ca}
+\phone{\href{mailto:ddeane@astheology.ns.ca}{ddeane@astheology.ns.ca}}
+\email{ddriver@astheology.ns.ca}
 \officehours[660 Building, then Library?]{By Appointment}
 
 \semester{Winter Term 2019}
