final syllabus for BF 1001, W20-Int

--- a/BF/BF 1001-Driver 2020.tex
+++ b/BF/BF 1001-Driver 2020.tex
@@ -11,8 +11,8 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-%\onlinetrue % \Int{true}{false}
-\coursecode[3.4]{BF 1001}
+\onlinetrue % \Int{true}{false}
+\coursecode[3.5]{BF 1001}
 \coursetitle[Biblical Foundations]{Hebrew Bible/Old Testament}
 
 % Taught as RLGS 1013 in:
@@ -37,18 +37,19 @@
 %   - Fall 2017
 %   - Fall 2017(Int - online section run parallel to campus course)
 %   - Fall 2018
+%   - Winter 2020(Int)
 
 \professor{Daniel R. Driver}
-\phone{902-425-7051}
+\phone{902-222-0930}
 \email{ddriver@astheology.ns.ca}
 \officehours{Thursdays, 12:30--2:00 \PM}
 
-\semester{Fall Term 2018}
-\meets{\Int{Thursdays}{Mondays}}% \meets{on}{at}{in}
-      {1:00--3:30 \PM}
-      {Classroom 3}
+\semester{Winter Term 2020}
+\meets{\Int{Fridays}{Mondays}}% \meets{on}{at}{in}
+      {1:00--3:30 \PM}% if online, it prints "From 9:00 AM"
+      {Classroom 3}% if online, it prints "Brightspace"
 \website{danieldriver.com}
-\cdescription[none. The course is required for HB courses at or above the 3000-level]{% copy from the current Academic Calendar; [] for prereqs
+\cdescription[none. The course is required for HB courses at or above the 3000-level. It is open to Continuing Education participants]{% copy from the current Academic Calendar; [] for prereqs
 	The First Testament of Christian Scripture, also called the Hebrew
 	Bible or Old Testament, is a fundamental part of Christian tradition
 	and durable rule of faith and practice. Students in this course will
@@ -114,25 +115,37 @@ have been placed on a 2-hour reserve.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
-\begin{thebibliography}{NRSV}% use the longest item in the bibliography
+\begin{thebibliography}{Irenaeus}% use the longest item in the bibliography
 
 	\bibitem[NRSV]{nrsv} M.\,D. Coogan, ed.
     \emph{New Oxford Annotated Bible with Apocrypha: NRSV}. 5th ed.
     Oxford: Oxford University Press, 2018.
-    ISBN 978-0190276072 (get the hardcover).
+    ISBN 978-0190276072.
 
 	\bibitem[HBFB]{hbfb} J. Kaminsky and J. Lohr.
 	\emph{The Hebrew Bible for Beginners: A Jewish and Christian Introduction}.
 	Nashville: Abingdon Press, 2015.
 	ISBN 978-1426775635.
 
+	\bibitem[Heschel]{heschel} Abraham Heschel.
+	\emph{The Sabbath: Its Meaning for Modern Man}.
+	New York: Farrar, Straus and Giroux, 1951 (repr. 2005).
+	ISBN 978-0374529758.
+
+	\bibitem[Irenaeus]{irenaeus} St Irenaeus of Lyons.
+	\emph{On the Apostolic Preaching}.
+	Trans. John Behr.
+	Crestwood, NY: St Vladimir’s Seminary Press, 1997.
+	ISBN 978-0881411744.
+
 \end{thebibliography}
 \endgroup
 
 An good alternative study Bible is the NJPS: Adele Berlin and Marc Zvi
 Brettler, eds., \emph{The Jewish Study Bible: Second Edition} (Oxford:
-Oxford University Press, 2014). A reference copy is available in the
-library, and it is well worth consulting.
+Oxford University Press, 2014). \href{https://danieldriver.com/courses/bf-1001/}{See
+my website for links to required and recommended books, and a discussion
+of options for a Bible.}
 
 \section{Supplementary Texts}
 \label{supplementary}
@@ -143,6 +156,10 @@ See \autoref{bib}. Give this material good effort and attention. It
 represents some of the best contemporary readers of the Bible, and you
 will not want to miss their hermeneutical and theological insights.
 
+If you are looking to build your biblical studies library, I recommend
+Konrad Schmid's \emph{A Historical Theology of the Hebrew Bible}
+\cite{ks19} for a recent introduction to critical scholarship that goes
+beyond \cite{hbfb}. Brevard Childs \cite{bc79, bc92} remain useful, too.
 Also, the following reference works are worth owning and consulting.
 \cite{rlgs} in particular contains sound advice on core skills like
 reading religious texts, writing essays and reviews, revising essays,
@@ -186,30 +203,30 @@ the needs of the class.
 
 	\unit{Law / Torah / Pentateuch} \\
 
-		& Genesis 1--11        & \HBFB{1--26}    & Christopher Seitz   & \Int{14}{10} Sep. \\
-		& Genesis 12--50       & \HBFB{27--64}   & Jon Levenson        & \Int{21}{17} Sep. \\
-		& Exodus 1--34         & \HBFB{65--75}   & C. Mathews McGinnis & \Int{28}{24} Sep. \\
-		& Leviticus 1--16      & \HBFB{77--83}   & Gary Anderson       & \Int{ 5}{ 1} Oct. \\
-	\noclass{AST Closed on Monday}                                     & \Int{2 }{ 8} Oct. \\
-		& Deuteronomy          & \HBFB{85--99}   & Walter Moberly      & \Int{12}{15} Oct. \\
-	\reminder{A first short paper is \textbf{due} by the end of the fifth week of class}{19 Oct.}    \\ [1ex]
+		& Genesis 1--11        & \HBFB{1--26}    & Seitz                     \cite{cs96} & \Int{10}{} Jan. \\
+		& Genesis 12--50       & \HBFB{27--64}   & Levenson                  \cite{jl12} & \Int{17}{} Jan. \\
+		& Exodus 1--34         & \HBFB{65--75}   & Mathews McGinnis         \cite{cmm12} & \Int{24}{} Jan. \\
+		& Leviticus 1--16      & \HBFB{77--83}   & Anderson                  \cite{ga17} & \Int{31}{} Jan. \\
+		& Deuteronomy          & \HBFB{85--99}   & \cite{heschel} or Moberly \cite{wm13} & \Int{ 7}{} Feb. \\
+	\reminder{A first short paper is \textbf{due} by the end of the sixth week of class}{14 Feb.}    \\ [1ex]
 
 	\unit{Prophets: Former \textit{\&} Latter} \\
 
-		& Joshua, Judges       & \HBFB{103--121} & Phyllis Trible      & \Int{19}{22} Oct. \\
-		& 1 \& 2 Samuel        & \HBFB{123--134} & Stephen Chapman     & \Int{26}{29} Oct. \\
-		& 1 \& 2 Kings         & \HBFB{135--143} & Robert Alter        & \Int{ 9}{ 5} Nov. \\
-	\noclass{AST Closed on Monday}                                     & \Int{2 }{12} Nov. \\
-		& Isaiah 1--12, 36--40 & \HBFB{145--168} & Ellen Davis         & \Int{16}{19} Nov. \\
-		& Hosea--Jonah         & \HBFB{169--184} & James Nogalski      & \Int{23}{26} Nov. \\
-	\reminder{A second short paper is \textbf{due} by the end of the tenth week of class}{30 Nov.}    \\ [1ex]
+		& Joshua, Judges       & \HBFB{103--121} & Trible                    \cite{pt84} & \Int{14}{} Feb. \\
+	\noclass{AST Reading Week}                                                           & \Int{21}{} Feb. \\
+		& 1 \& 2 Samuel        & \HBFB{123--134} & Chapman                   \cite{sc16} & \Int{28}{} Feb. \\
+		& 1 \& 2 Kings         & \HBFB{135--143} & Alter                     \cite{ra81} & \Int{ 6}{} Mar. \\
+%	\noclass{AST Closed on Monday}                                                       & \Int{2 }{} Mar. \\
+		& Isaiah 1--12, 36--40 & \HBFB{145--168} & \cite{irenaeus} or Davis  \cite{ed14} & \Int{13}{} Mar. \\
+		& Hosea--Jonah         & \HBFB{169--184} & Nogalski          \cite{jn07a, jn07b} & \Int{20}{} Mar. \\
+	\reminder{A second short paper is \textbf{due} by the end of the eleventh week of class}{27 Mar.}    \\ [1ex]
 
 	\unit{Writings: Wisdom \textit{\&} Praise} \\
 
-		& Psalms 1--8, 41, 51, 89–90 & \HBFB{187--202} & N. deClaissé-Walford & \Int{30}{ 3} Dec. \\
-		& Ecclesiastes         & \HBFB{203--246} & Michael V. Fox      & \Int{ 7}{10} Dec. \\ [1ex]
+		& Psalms 1--8, 41, 51, 89–90 & \HBFB{187--202} & deClaissé-Walford  \cite{ndw14} & \Int{27}{} Mar. \\
+		& Ecclesiastes         & \HBFB{203--246} & Fox \cite{mf04} or Dell   \cite{kd13} & \Int{ 3}{} Apr. \\ [1ex]
 
-	\reminder{End of Term: Final marks are due for all courses}{14 Dec.} \\
+	\reminder{End of Term: Final marks are due for all courses}{14 Apr.} \\
 
 	\bottomrule
   \end{tabular}
@@ -229,47 +246,58 @@ The grade structure for \ccode has the following elements.
 	\item \textbf{Reading prompts} will be given throughout the
 	semester. They are low-risk writing exercises designed to encourage
 	careful reading of the assigned material, and to help explore its
-	significance. They are not marked (although points may be deducted
-	if the exercise is not taken seriously), and there is no length
-	requirement. In general, prompt responses submitted online should
-	not exceed 300 words.
+	significance. Individual posts are not marked, though points may be
+	deducted from your final grade if the exercise is not taken
+	seriously. In general, prompt responses submitted online should not
+	exceed 300 words. Try to post the in the morning of class days,
+	after you do the reading but before you listen to the lecture. You
+	are invited (but not strictly required) to respond to and interact
+	with classmates on the forums through the rest of the day.
 
 	\item Two \textbf{short papers} will facilitate student engagement
 	with the art of biblical interpretation. One is keyed to the
-	exposition of a scholar, the other to a short biblical text. Each
-	should be about 2,000 words in length. Either paper (your choice) is
-	due at the end of the fifth week of class; the remaining one is due
-	at the end of the tenth week.
+	exposition of a model, the other to a short biblical text. Each
+	should be about 2,500 words in length. Either paper (your choice) is
+	due at the end of the sixth week of class; the other one is due at
+	the end of the eleventh week.
 
 	\begin{enumerate}
 
 		\item A \textbf{review essay} invites student reflection on a
-		model work of biblical interpretation, to be selected from the
+		model work of biblical interpretation. The short books by
+		\cite{heschel} and \cite{irenaeus} are the primary options,
+		though with permission you may also select one of the
 		supplementary articles. Note that a review is not the same thing
 		as a report. Devote the first half of the paper to a summary the
-		argument under review, and the second half to critical analysis
-		and evaluation of the same. Be fair, but do not fail to take a
-		position. The paper needs to develop a thesis. See me and
-		\cite[Chs 3, 5–7, 11]{rlgs} for guidance.
+		interpretation or argument under review, and be mindful that
+		traditional interpretation requires special attention to
+		context. (Irenaeus' reading of Isaiah or the Jewish tradition
+		around sabbath observance are not the same thing as an academic
+		article on the Book of the Twelve.) Devote the second half of
+		the paper to critical analysis and evaluation of your chosen
+		example. Be fair, but do not fail to take a position. The paper
+		needs to develop a \textbf{thesis}. See me and \cite[Chs 3, 5–7,
+		11]{rlgs} for guidance.
 
 		\item An \textbf{exegetical essay} provides an opportunity for
 		direct work with the biblical text. The first task is to
 		identify an appropriate text. Select a suitably short passage
 		from the HB/OT. Then, conduct an analysis and explication of it.
 		Interact with \cite{hbfb} and at least two other commentators.
-		Advance a thesis that relates to the text itself. See me and
-		\cite[Chs 3, 5, 8, 11]{rlgs} for guidance.
+		Advance a \textbf{thesis} that relates to the text itself. See
+		me and \cite[Chs 3, 5, 8, 11]{rlgs} for guidance.
 
 	\end{enumerate}
 
 \Int{
 	\item Each student will \textbf{make an online presentation} on one
-	of the twelve supplementary articles. It may take the form of a
-	podcast or YouTube video, and should be sharable by URL. The
-	discussion, which should last 20 minutes, should begin with a brief
-	(5~min) summary of the article. The balance of the time should be
-	spent helping other readers elaborate, reflect on, test, challenge,
-	or extend the main ideas presented there.
+	of the twelve supplementary articles. Be creative! It may take the
+	form of a podcast or online video, and should be sharable by URL
+	(try SoundCloud, YouTube, or Vimeo). The presentation should last
+	15–20 minutes. It must begin with a brief (5~min) summary of the
+	article. The balance of the time should be spent helping other
+	readers elaborate, reflect on, test, challenge, or extend the main
+	ideas presented there.
 }{
 	\item Each student will lead a \textbf{seminar discussion} of one
 	chapter from the HB/OT, freely chosen from a week's primary reading.
@@ -292,10 +320,10 @@ The breakdown for the semester's total work is shown in
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Reading Prompts  & 20\% \\
-    Review Essay     & 30\% \\
-    Exegetical Essay & 30\% \\
-    \Int{Online}{Seminar} Discussion & 20\% \\
+    Reading Prompts  & 25\% \\
+    Review Essay     & 25\% \\
+    Exegetical Essay & 25\% \\
+    \Int{Online Presentation}{Seminar Discussion} & 25\% \\
     \bottomrule
   \end{tabular}}
   \caption{Distribution of Grades}
@@ -376,6 +404,8 @@ of them model compelling, highly competent ways of reading the HB/OT.
 \bibitem{cs18} Seitz, Christopher R. “‘Can We Read This Book?’ Reader Response-ability.” Pages 51–68 in \emph{The Elder Testament: Canon, Theology, Trinity}. Waco, TX: Baylor University Press, 2018.
 
 \bibitem{gs92} Sheppard, Gerald T. “Theology and the Book of Psalms.” \emph{Interpretation} 46.2 (1992): 143–55.
+
+\bibitem{ks19} Schmid, Konrad. \emph{A Historical Theology of the Hebrew Bible}. Translated by Peter Altmann. Grand Rapids: Eerdmans, 2019. ISBN 978-0802876935.
 
 \bibitem{pt84} Trible, Phyllis. “An Unnamed Woman: The Extravagance of Violence.” Pages 65–91 in \emph{Texts of Terror: Literary-Feminist Readings of Biblical Narratives}. Overtures to Biblical Theology. Philadelphia: Fortress, 1984.
 
