--- a/policy/other.tex
+++ b/policy/other.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{other.tex}[2019/01/05 v2.6 -- Course policy]
+\ProvidesFile{other.tex}[2019/12/10 v2.7 -- Course policy]
 
 \section{Other Course Policy}
 \label{policy}
@@ -6,7 +6,8 @@
 Late work will not be accepted, except in genuinely extenuating
 circumstances. Students must submit something before the deadline if
 they wish to receive credit. Unless I state otherwise, written
-assignments are to be uploaded by 11:59 \PM\ on the date indicated.
+assignments are to be uploaded by 11:59 \PM\ on the date indicated\Int{,
+in whatever time zone you happen to be in}{}.
 
 Essay submissions must be typewritten, double-spaced, and formatted as
 PDFs. They should be free from error. In this course they should follow
@@ -31,7 +32,7 @@ other technology in my classes. In classroom settings, realize that, as
 \href{http://dx.doi.org/10.1016/j.compedu.2012.10.003}{cognitive
 psychologists have demonstrated}, ``laptop multitasking hinders
 classroom learning for both users and nearby peers.'' Do your part to
-foster an environment of open dialogue by honouring the presence of your
+foster an environment for dialogue by honouring the presence of your
 classmates. In online and hybrid settings, consider both the physical
 environment in which you choose to work and the virtual environment that
 you help create through your participation in various forums. Let your
