correct caps for ANE (aNE)

--- a/BF/BF 1001-Driver 2020.tex
+++ b/BF/BF 1001-Driver 2020.tex
@@ -74,7 +74,7 @@
 	By the end of the course students should be able to:
 		name major Old Testament people and events;
 		locate a few important biblical sites on a map;
-		give key dates for Israel's history and summarize the succession of superpowers in the Ancient Near Eastern political theatre from Egypt to Greece;
+		give key dates for Israel's history and summarize the succession of superpowers in the ancient Near Eastern political theatre from Egypt to Greece;
 		recognize and cite examples of most genres of biblical literature;
 %		defend a decision to pronounce or circumlocute the divine name;
 		understand the general shape of the Masoretic Text tradition and differentiate it from other canonical orders;
