--- a/BF/BF 1001-Driver 2020.tex
+++ b/BF/BF 1001-Driver 2020.tex
@@ -203,9 +203,9 @@ the needs of the class.
 
 	\unit{Law / Torah / Pentateuch} \\
 
-		& Genesis 1--11        & \HBFB{1--26}    & Seitz                     \cite{cs96} & \Int{10}{} Jan. \\
+		& Genesis 1--11        & \HBFB{1--26}    & Davis \cite{ed03}, Seitz  \cite{cs96} & \Int{10}{} Jan. \\
 		& Genesis 12--50       & \HBFB{27--64}   & Levenson                  \cite{jl12} & \Int{17}{} Jan. \\
-		& Exodus 1--34         & \HBFB{65--75}   & Mathews McGinnis         \cite{cmm12} & \Int{24}{} Jan. \\
+		& Exodus 1--34         & \HBFB{65--75}   & McGinnis                  \cite{cm12} & \Int{24}{} Jan. \\
 		& Leviticus 1--16      & \HBFB{77--83}   & Anderson                  \cite{ga17} & \Int{31}{} Jan. \\
 		& Deuteronomy          & \HBFB{85--99}   & \cite{heschel} or Moberly \cite{wm13} & \Int{ 7}{} Feb. \\
 	\reminder{A first short paper is \textbf{due} by the end of the sixth week of class}{14 Feb.}    \\ [1ex]
@@ -224,7 +224,7 @@ the needs of the class.
 	\unit{Writings: Wisdom \textit{\&} Praise} \\
 
 		& Psalms 1--8, 41, 51, 89–90 & \HBFB{187--202} & deClaissé-Walford  \cite{ndw14} & \Int{27}{} Mar. \\
-		& Ecclesiastes         & \HBFB{203--246} & Fox \cite{mf04} or Dell   \cite{kd13} & \Int{ 3}{} Apr. \\ [1ex]
+		& Ecclesiastes         & \HBFB{203--246} & Dell \cite{kd13} or Fox   \cite{mf04} & \Int{ 3}{} Apr. \\ [1ex]
 
 	\reminder{End of Term: Final marks are due for all courses}{14 Apr.} \\
 
@@ -387,7 +387,7 @@ of them model compelling, highly competent ways of reading the HB/OT.
 
 \bibitem{nm09} MacDonald, Nathan. “Israel and the Old Testament Story in Irenaeus’s Presentation of the Rule of Faith.” \emph{Journal of Theological Interpretation} 3.2 (2009): 281–98.
 
-\bibitem{cmm12} Mathews McGinnis, Claire. “The Hardening of Pharaoh’s Heart in Christian and Jewish Interpretation.” \emph{Journal of Theological Interpretation} 6.1 (2012): 43–64.
+\bibitem{cm12} McGinnis, Claire Mathews. “The Hardening of Pharaoh’s Heart in Christian and Jewish Interpretation.” \emph{Journal of Theological Interpretation} 6.1 (2012): 43–64.
 
 \bibitem{wm92} Moberly, R. W. L. \emph{The Old Testament of the Old Testament: Patriarchal Narratives and Mosaic Yahwism}. Minneapolis: Fortress, 1992.
 
