add link to Brightspace for online courses

--- a/BF/BF 1001-Driver 2020.tex
+++ b/BF/BF 1001-Driver 2020.tex
@@ -47,7 +47,7 @@
 \semester{Winter Term 2020}
 \meets{\Int{Fridays}{Mondays}}% \meets{on}{at}{in}
       {1:00--3:30 \PM}% if online, it prints "From 9:00 AM"
-      {Classroom 3}% if online, it prints "Brightspace"
+      {Classroom 3}% if online, it prints "Brightspace" with link
 \website{danieldriver.com}
 \cdescription[none. The course is required for HB courses at or above the 3000-level. It is open to Continuing Education participants]{% copy from the current Academic Calendar; [] for prereqs
 	The First Testament of Christian Scripture, also called the Hebrew
