--- a/includes/variables.tex
+++ b/includes/variables.tex
@@ -55,7 +55,7 @@
   \newcommand\PM{\textsc{pm}}
   \renewcommand\cmeetson{#1\xspace}
   \renewcommand\cmeetsat{\Int{From 9:00 \AM}{#2}\xspace}
-  \renewcommand\cmeetsin{\Int{Brightspace}{#3}\xspace}}
+  \renewcommand\cmeetsin{\Int{\href{https://smu.brightspace.com/d2l/login}{Brightspace}}{#3}\xspace}}
 \newcommand\website[1]{
   \renewcommand\cwebsite{\href{http://#1}{#1}\xspace}}
 \newcommand\cdescription[2][RM 1000 or GTRS 6000; and BF 1001]{
